<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_send"
        android:enabled="true"
        android:icon="@drawable/ic_nav_send"
        android:title="@string/send_title" />

    <item
        android:id="@+id/nav_history"
        android:enabled="true"
        android:icon="@drawable/ic_nav_history"
        android:title="@string/BottomNavItem.History.title" />

    <item
        android:id="@+id/nav_receive"
        android:enabled="true"
        android:icon="@drawable/ic_nav_receive"
        android:title="@string/bottom_nav_item_buy_receive_title" />

</menu>