...
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="@+id/title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/title" />

                <ImageButton
                    android:id="@+id/close_button"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@drawable/ic_close_black_24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="0dp"
...
                    android:layout_marginStart="@dimen/bread_margin"
                    android:text="$"
                    android:textSize="28sp" />

                <EditText
                    style="@style/BREditStyle"
                    android:id="@+id/amount_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="4dp"
                    android:layout_toEndOf="@id/iso_text"
...
